gitops-repo/apps/payment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment
    component: backend
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
